--- a/index_zw.html
+++ b/index_zw.html
@@ -31,24 +31,24 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Juncheng Li (李俊诚)</h1> 
+					<h1>李俊诚 (Li Juncheng)</h1> 
 				</div>
 
-				<h3> PhD Student </h3>
+				<h3> 博士研究生 </h3>
 				<p>
-					School of Computer Science and Technology<br>
-					East China Normal University<br>
-					3363 Zhongshan North Road,<br>
-					Shanghai, China, 200062.<br>
+					计算机科学与技术学院<br>
+					华东师范大学<br>
+					中山北路3663号,<br>
+					上海, 中国, 200062.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
-					Email: cvjunchengli@gmail.com 	       
+					邮箱: cvjunchengli@gmail.com 	       
 				</p>
 				<p> 
 					<!-- <a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a> -->
 					<a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
-					<a href="index_zw.html", target="_blank"><img src="./pic/zw.png" height="30px" style="margin-bottom:-3px"></a>
+					<a href="index.html", target="_blank"><img src="./pic/en.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
 			<td>
@@ -58,67 +58,66 @@
 	</tr></tbody>
 </table>
 
-<h2>Biography</h2>
+<h2>简介</h2>
 <p>
-	I am a PhD student at the School of Computer Science and Technology, East China Normal University (ECNU), co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.07.
+	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> 张桂戌 </a>教授</b> 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a>教授共同指导</b>。 我将于 2021.07 毕业。
 </p>
 
-<p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, &amp; crowd counting) and images processing (e.g., image super-resolution, image denoising, &amp; image dehazing).</p>
+<p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割 &amp;人群计数）和图像处理（例如：图像超分辨率，图像去噪 &amp; 图像去雾）中的应用。</p>
 
+<h2>荣誉 &amp; 奖项</h2>
 
-<h2>Honors &amp; Awards</h2>
-
-<h3>2016-Now (Graduate Period)</h3>
+<h3>2016-至今 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Outstanding Student, East China Normal University, 2020.</td></tr> 	
-		<tr><td>Wisdom Scholarship, East China Normal University, 2020. (1.5%)</td></tr> 	
-		<tr><td>Doctoral Research and Innovation Fund Project, East China Normal University, 2020.</td></tr> 	
-		<tr><td>Graduate Scholarship, East China Normal University, 2016-2020.</td></tr> 	
-		<tr><td>ICCV Travel Award, 2019.</td></tr> 	
-		<tr><td> The 1st place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 2: Perceptual. <b>(ICCV-AIM)</b>, 2019.</td></tr>
-		<tr><td> The 2nd place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 1: Fidelity. <b>(ICCV-AIM)</b>, 2019.</td></tr>
-		<tr><td> The 4th place and "Geek Award" in Alibaba - <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"Youku Video Enhancement and Super Resolution Challenge"</a> <b>(4/1514)</b>, 2019.</td></tr>
-		<tr><td> The 3rd place in China Multimedia - <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"Image Dehazing Challenge"</a>, <b>(ChinaMM)</b>, 2018.</td></tr>
-		<tr><td> The 6th place and "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"Image Dehazing Challenge".</a> <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
-		<tr><td>Ranked 24th in Jingdong Algorithm Challenge - "Potential User Prediction" <b>(24/4240)</b>, 2017.</td></tr>
+		<tr><td>优秀学生, 华东师范大学, 2020.</td></tr> 	
+		<tr><td>智慧奖学金, 华东师范大学, 2020. (1.5%)</td></tr> 	
+		<tr><td>博士生科研创新基金项目, 华东师范大学, 2020.</td></tr> 	
+		<tr><td>研究生奖学金, 华东师范大学, 2016-2020.</td></tr> 	
+		<tr><td>ICCV 旅行资助, 2019.</td></tr> 	
+		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的感知赛道的全球第一名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
+		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的保真赛道的全球第二名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
+		<tr><td>获得<a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"阿里巴巴 - 优酷视频增强和超分辨率挑战赛"</a>全国第四名 和 “极客奖”, <b>(4/1514)</b>, 2019.</td></tr>
+		<tr><td> 获得<a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"中国多媒体大会 - 去雾挑战赛"</a>全国第三名, 二等奖, <b>(ChinaMM)</b>, 2018.</td></tr>
+		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"图像去雾挑战赛" 全球第六名 和 “荣誉提名奖”</a>, <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
+		<tr><td>获得 "京东算法挑战赛 - 潜在购买用户预测" 全国第24名, <b>(24/4240)</b>, 2017.</td></tr>
 	</tbody>
 </table>
 
-<h3>2012-2016 (Undergraduate Period)</h3></tbody>
+<h3>2012-2016 (本科期间)</h3></tbody>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Mingde Scholarship, China, 2015. (3%)</td></tr> 
-		<tr><td>Second Award in National Computer Design Contest, Chian, 2014, 2015.</td></tr> 
-		<tr><td>Outstanding Graduates, Jiangxi Normal University, 2016.</td></tr> 
-		<tr><td>Merit Student, Jiangxi Normal University, 2013-2016.</td></tr>
-		<tr><td>Outstanding Student, Jiangxi Normal University, 2013-2016.</td></tr> 
-		<tr><td>First-class Student Scholarship, Jiangxi Normal University, 2013-2016</td></tr> 
+		<tr><td>明德奖学金, 中国, 2015. (3%)</td></tr> 
+		<tr><td>中国大学生计算机设计大赛全国二等奖, Chian, 2014, 2015.</td></tr> 
+		<tr><td>优秀毕业生, 江西师范大学, 2016.</td></tr> 
+		<tr><td>三好学生, 江西师范大学, 2013-2016.</td></tr>
+		<tr><td>优秀学生, 江西师范大学, 2013-2016.</td></tr> 
+		<tr><td>一等学业奖学金, 江西师范大学, 2013-2016</td></tr> 
 	</tbody>
 </table>
 
 
-<h2>Experience</h2>
+<h2>学术经历</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div><br>
-		Research Assistant<br>
-		Topic: Image Compression<br>
-		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
+		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div><br>
+		职位: 研究助理<br>
+		研究内容: 图像压缩<br>
+		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
 	</li>
 	<li>
-		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div><br>
-		Research Assistant<br>
-		Topic: Image Restoration<br>
-		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
+		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div><br>
+		职位: 研究助理<br>
+		研究内容: 图像修复<br>
+		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
 	</li>
 </ul>
 
 
 
-<h2>Selected Publications </h2>
-<h3>[Total Citations: 255] [Highest Citation: 143] [Total IF: 34.066] [Accepted: 13]</h3>
-<h4>Journal Papers</h4>
+<h2>精选出版物 </h2>
+<h3>[总引用: 255] [最高引用: 143] [总影响因子: 34.066] [接收论文: 13]</h3>
+<h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
     <tr>	
@@ -192,7 +191,7 @@
     <tr></tr>
 </tbody></table>
 
-<h4>Conference Papers</h4></table>
+<h4>会议论文</h4></table>
 <table id="tbPublications" width="100%">
     <tr>	
 		<td width="206">
@@ -268,9 +267,9 @@
 
 
 
-<h2>Academic Services</h2>
+<h2>学术服务</h2>
 
-<h3>Reviewer</h3>
+<h3>审稿人</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
@@ -303,20 +302,20 @@
 	</tbody>
 </table>
 
-<h3>Association Member</h3>
+<h3>学会会员</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> Member of China Computer Federation (CCF)</td>
+			<td> 中国计算机学会（CCF）会员</td>
 		</tr>
 		<tr>
-			<td> Member of the Computer Vision Foundation (CVF)</td>
+			<td> 计算机视觉基金会（CVF）会员</td>
 		</tr>
 		<tr>
-			<td> Founder of CLF Studio 【A non-profit student innovation studio】</td>
+			<td> 丛林蜂工作室（CLF Studio）创始人 【非营利学生创新工作室】</td>
 		</tr>
 		<tr>
-			<td> Founder of <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 【A non-profit image processing laboratory affiliated with CLF-AI】</td>
+			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 创始人 【隶属于CLF-AI的非营利性图像处理中心】</td>
 		</tr>
 	</tbody>
 </table>
