--- a/index_zw.html
+++ b/index_zw.html
@@ -6,10 +6,10 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
 <meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, ECNU, East China Normal University, 李俊诚, 俊诚, 华东师范大学"> 
-<meta name="description" content="Juncheng Li's home page">
+<meta name="description" content="李俊诚的主页">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Juncheng Li</title>
+<title>李俊诚</title>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -60,7 +60,7 @@
 
 <h2>简介</h2>
 <p>
-	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> 张桂戌 </a>教授</b> 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a>教授共同指导</b>。 我将于 2021.07 毕业。
+	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。 我将于 2021.07 毕业。
 </p>
 
 <p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割 &amp;人群计数）和图像处理（例如：图像超分辨率，图像去噪 &amp; 图像去雾）中的应用。</p>
