--- a/index_zw.html
+++ b/index_zw.html
@@ -63,7 +63,7 @@
 	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。 我将于 2021.07 毕业。
 </p>
 
-<p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割 &amp;人群计数）和图像处理（例如：图像超分辨率，图像去噪 &amp; 图像去雾）中的应用。</p>
+<p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾）中的应用。</p>
 
 <h2>荣誉 &amp; 奖项</h2>
 
