--- a/index_zw.html
+++ b/index_zw.html
@@ -79,7 +79,7 @@
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的保真赛道的全球第二名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td>获得<a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"阿里巴巴 - 优酷视频增强和超分辨率挑战赛"</a>全国第四名 和 “极客奖”, <b>(4/1514)</b>, 2019.</td></tr>
 		<tr><td> 获得<a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"中国多媒体大会 - 去雾挑战赛"</a>全国第三名, 二等奖, <b>(ChinaMM)</b>, 2018.</td></tr>
-		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"图像去雾挑战赛" 全球第六名 和 “荣誉提名奖”</a>, <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
+		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"图像去雾挑战赛"</a>全球第六名 和 “荣誉提名奖”, <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
 		<tr><td>获得 "京东算法挑战赛 - 潜在购买用户预测" 全国第24名, <b>(24/4240)</b>, 2017.</td></tr>
 	</tbody>
 </table>
