--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>Mingde Scholarship, China, 2015. (3%)</td></tr> 
-		<tr><td>Second Award in National Computer Design Contest, Chian, 2014, 2015.</td></tr> 
+		<tr><td>Second Award in National Computer Design Contest, China, 2014, 2015.</td></tr> 
 		<tr><td>Outstanding Graduates, Jiangxi Normal University, 2016.</td></tr> 
 		<tr><td>Merit Student, Jiangxi Normal University, 2013-2016.</td></tr>
 		<tr><td>Outstanding Student, Jiangxi Normal University, 2013-2016.</td></tr> 
