--- a/projects/TIP2020_SEANET/index.html
+++ b/projects/TIP2020_SEANET/index.html
@@ -143,7 +143,6 @@ var _hmt = _hmt || [];
 		<td>
 			<font size="4">: <a href="https://junchenglee.com/paper/TIP_2020.pdf" target="_blank">[ TIP2020_SEANET.pdf ]</a></font>
 		</td>
-
 		</tr>
 							
 		<tr align="left">
@@ -153,7 +152,15 @@ var _hmt = _hmt || [];
 		<td>
 			<font size="4">: <a href="https://www.jianguoyun.com/p/DaKOxvEQ19ySBxi_1o4B" target="_blank">[ SeaNet_SR.zip ]</a></font>
 		</td>
+		</tr>
 
+		<tr align="left">
+		<td>
+			<font size="4">Pre-trained model</font>
+		</td>
+		<td>
+			<font size="4">: <a href="https://www.jianguoyun.com/p/DWH-BrEQ19ySBxiJ9s4D" target="_blank">[ TIP2020_SEANET_premodel.zip ]</a></font>
+		</td>
 		</tr>
 
 					
