--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
 <h2>Experience</h2>
 <ul>
 	<li>
+		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
+		Research Assistant<br>
+		Topic: Medical Image Segmentation & Research on Uncertainty in Deep Learning<br>
+		Supervisor: Prof. <a href="http://www.hebmlc.org/", target="_blank">Xizhao Wang</a> (IEEE Fellow, CAAI Fellow, JMLC Editor-in-Chief)<br>
+	</li>
+	<li>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div><br>
 		Research Assistant<br>
 		Topic: Image Compression<br>
@@ -118,7 +124,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 264] [Highest Citation: 151] [Total IF: 34.066] [Accepted: 13]</h3>
+<h3>[Total Citations: 266] [Highest Citation: 153] [Total IF: 34.066] [Accepted: 13]</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
