--- a/index_zw.html
+++ b/index_zw.html
@@ -89,7 +89,7 @@
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>明德奖学金, 中国, 2015. (3%)</td></tr> 
-		<tr><td>中国大学生计算机设计大赛全国二等奖, Chian, 2014, 2015.</td></tr> 
+		<tr><td>中国大学生计算机设计大赛全国二等奖, 中国, 2014, 2015.</td></tr> 
 		<tr><td>优秀毕业生, 江西师范大学, 2016.</td></tr> 
 		<tr><td>三好学生, 江西师范大学, 2013-2016.</td></tr>
 		<tr><td>优秀学生, 江西师范大学, 2013-2016.</td></tr> 
@@ -100,6 +100,12 @@
 
 <h2>学术经历</h2>
 <ul>
+	<li>
+		<div style="text-align:left">深圳大学, 深圳 </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div>
+		职位: 研究助理<br>
+		研究内容: 医学图像分割、深度学习中的不确定性研究<br>
+		主管: <a href="http://www.hebmlc.org/", target="_blank">王熙照</a> 教授 (IEEE Fellow, CAAI Fellow, JMLC 主编)<br>
+	</li>
 	<li>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div>
 		职位: 研究助理<br>
@@ -117,7 +123,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 264] [最高引用: 151] [总影响因子: 34.066] [接收论文: 13]</h3>
+<h3>[总引用: 266] [最高引用: 153] [总影响因子: 34.066] [接收论文: 13]</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -128,10 +134,10 @@
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-		<font color="red">Improved version of MSRN.</font><br>
-        <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
-		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[Homepage]</a>
+		<font color="red">MSRN模型的改进版本。</font><br>
+        <a href="paper/TCSVT_2020.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[项目主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -146,11 +152,11 @@
 		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
 		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
-		<font color="red">*First contributor, Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK).</font><br> 
-        <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
-		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
+		<font color="red">*第一贡献人, 作者按字母序排列。</font><br> 
+		<font color="red">该工作是在香港中文大学访问期间完成的。</font><br> 
+        <a href="paper/TIP_2020.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[项目主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -165,11 +171,11 @@
 		<td> <a href="paper/TNNLS_2020.pdf" target="_blank">Multi-level Edge Features Guided Network for Image Denoisingt</a><br>
 		Faming Fang, <b>Juncheng Li*</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
-		<font color="red">*First contributor, Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK).</font><br> 
-        <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
-		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[Homepage]</a>
+		<font color="red">*第一贡献人, 作者按字母序排列。</font><br> 
+		<font color="red">该工作是在香港中文大学访问期间完成的。</font><br> 
+        <a href="paper/TNNLS_2020.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[项目主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -184,8 +190,8 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#Equal Contribution</font><br> 
-		<a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
+		<font color="red">#共同一作</font><br> 
+		<a href="paper/TMM_2020.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -202,9 +208,9 @@
 		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
 		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang.
 		<p><em>IInternational Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">AIM2019 Winner</font><br> 
-		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
+		<font color="red">AIM2019 图像增强挑战赛冠军模型。</font><br> 
+		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[论文]</a>
+        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[代码]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -219,12 +225,12 @@
 		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang.
 		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">Oral Presentation</font><br>
-		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
-        <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
-        <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
-		<a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/ICCVW2019_SRRFN", target="_blank">[Homepage]</a>
+		<font color="red">口头报告论文（Oral）</font><br>
+		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[论文]</a>
+        <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[海报]</a>
+        <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[报告PPT]</a>
+		<a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/ICCVW2019_SRRFN", target="_blank">[项目主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -239,11 +245,11 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">The most popular paper. 206 stars and 46 forks in Github.</font><br>
-		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
-        <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
-		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[Homepage]</a>
+		<font color="red">最受欢迎论文，在GitHub上有210颗Star,46个Fork。</font><br>
+		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
+        <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
+		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[项目主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -258,9 +264,9 @@
 		<td> <a href="paper/ACCV_2018.pdf" target="_blank">Progressive Feature Fusion Network for Realistic Image Dehazing</a><br>
 		Kangfu Mei, Aiwen Jiang, <b>Juncheng Li</b>, and Mingwen Wang.
 		<p><em>Asian Conference on Computer Vision</em> (<i><b>ACCV</b></i>), 2018.<br>
-		<font color="red">The 3rd place in "ChinaMM2018 Image Dehazing Challenge"</font><br>
-		<a href="paper/ACCV_2018.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
+		<font color="red">中国多媒体大会（ChinaMM）图像去雾挑战赛第三名模型。</font><br>
+		<a href="paper/ACCV_2018.pdf", target="_blank">[论文]</a>
+        <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[代码]</a>
 		</td>
 	</tr>
 	<tr></tr>
