--- a/index_zw.html
+++ b/index_zw.html
@@ -98,7 +98,7 @@
 </table>
 
 
-<h2>学术经历</h2>
+<h2>研究经历</h2>
 <ul>
 	<li>
 		<div style="text-align:left">深圳大学, 深圳 </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div>
