--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </table>
 
 
-<h2>Experience</h2>
+<h2>Research Experience</h2>
 <ul>
 	<li>
 		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
