--- a/index_zw.html
+++ b/index_zw.html
@@ -46,7 +46,7 @@
 				</p>
 				<p> 
 					<!-- <a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a> -->
-					<a href="JunchengLi-CV.pdf", target="_blank"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a>
+					<!-- <a href="JunchengLi-CV.pdf", target="_blank"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a> -->
 					<a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="index.html", target="_blank"><img src="./pic/en.png" height="30px" style="margin-bottom:-3px"></a>
