--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <h3>2016-Now (Graduate Period)</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020.</td></tr> 	
 		<tr><td>Outstanding Student, East China Normal University, 2020.</td></tr> 	
 		<tr><td>Wisdom Scholarship, East China Normal University, 2020. (1.5%)</td></tr> 	
 		<tr><td>Doctoral Research and Innovation Fund Project, East China Normal University, 2020.</td></tr> 	
