--- a/index_zw.html
+++ b/index_zw.html
@@ -71,6 +71,7 @@
 <h3>2016-至今 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>"创智青年"称号, 华东师范大学, 2020.</td></tr> 	
 		<tr><td>优秀学生, 华东师范大学, 2020.</td></tr> 	
 		<tr><td>智慧奖学金, 华东师范大学, 2020. (1.5%)</td></tr> 	
 		<tr><td>博士生科研创新基金项目, 华东师范大学, 2020.</td></tr> 	
