--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 266] [Highest Citation: 153] [Total IF: 34.066] [Accepted: 13]</h3>
+<h3>[Total Citations: 270] [Highest Citation: 155] [Total IF: 34.066] [Accepted: 13]</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -280,7 +280,8 @@
 
 <h2>Academic Services</h2>
 
-<h3>Reviewer</h3>
+<h3>Selected Reviewer</h3>
+<h4>Journal</h4>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
@@ -296,13 +297,19 @@
 			<td> Information Science (INS, SCI-1)</td>
 		</tr>
 		<tr>
+			<td> IEEE Signal Processing Letters (SPL)</td>
+		</tr>
+		<tr>
 			<td> IEEE Access</td>
 		</tr>
+	</tbody>
+</table>
+
+<h4>Conference</h4>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
 		<tr>
-			<td> IET Image Processing</td>
-		</tr>
-		<tr>
-			<td> IEEE Signal Processing Letters (SPL)</td>
+			<td> International Conference on Multimedia and Expo (ICME)</td>
 		</tr>
 		<tr>
 			<td> British Machine Vision Conference (BMVC)</td>
@@ -312,6 +319,7 @@
 		</tr>
 	</tbody>
 </table>
+
 
 <h3>Association Member</h3>
 <table id="tbTeaching" border="0" width="100%">
