--- a/index_zw.html
+++ b/index_zw.html
@@ -124,7 +124,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 266] [最高引用: 153] [总影响因子: 34.066] [接收论文: 13]</h3>
+<h3>[总引用: 270] [最高引用: 155] [总影响因子: 34.066] [接收论文: 13]</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -279,7 +279,8 @@
 
 <h2>学术服务</h2>
 
-<h3>审稿人</h3>
+<h3>精选审稿人</h3>
+<h4>期刊</h4>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
@@ -295,13 +296,19 @@
 			<td> Information Science (INS, SCI-1)</td>
 		</tr>
 		<tr>
+			<td> IEEE Signal Processing Letters (SPL)</td>
+		</tr>
+		<tr>
 			<td> IEEE Access</td>
 		</tr>
+	</tbody>
+</table>
+
+<h4>会议</h4>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
 		<tr>
-			<td> IET Image Processing</td>
-		</tr>
-		<tr>
-			<td> IEEE Signal Processing Letters (SPL)</td>
+			<td> International Conference on Multimedia and Expo (ICME)</td>
 		</tr>
 		<tr>
 			<td> British Machine Vision Conference (BMVC)</td>
