--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@
 			<td> Member of the Computer Vision Foundation (CVF)</td>
 		</tr>
 		<tr>
+			<td> Member of the China Society of Image Graphics (CSIG)</td>
+		</tr>
+		<tr>
 			<td> Founder of CLF Studio 【A non-profit student innovation studio】</td>
 		</tr>
 		<tr>
