--- a/index_zw.html
+++ b/index_zw.html
@@ -329,6 +329,9 @@
 			<td> 计算机视觉基金会（CVF）会员</td>
 		</tr>
 		<tr>
+			<td> 中国图象图形学学会（CSIG）会员</td>
+		</tr>
+		<tr>
 			<td> 丛林蜂工作室（CLF Studio）创始人 【非营利学生创新工作室】</td>
 		</tr>
 		<tr>
