--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
 <ul>
 	<li>
 		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
-		Research Assistant<br>
+		Research Assistant (RA)<br>
 		Topic: Medical Image Segmentation & Research on Uncertainty in Deep Learning<br>
 		Supervisor: Prof. <a href="http://www.hebmlc.org/", target="_blank">Xizhao Wang</a> (IEEE Fellow, CAAI Fellow, JMLC Editor-in-Chief)<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div><br>
-		Research Assistant<br>
+		Research Assistant (RA)<br>
 		Topic: Image Compression<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div><br>
-		Research Assistant<br>
+		Research Assistant (RA)<br>
 		Topic: Image Restoration<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
 	</li>
@@ -125,7 +125,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 276] [Highest Citation: 158] [Total IF: 34.066] [Accepted: 13]</h3>
+<h3>[Total Citations: 277] [Highest Citation: 160] [Total IF: 34.066] [Accepted: 13]</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -338,6 +338,112 @@
 		</tr>
 		<tr>
 			<td> Founder of <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 【A non-profit image processing laboratory affiliated with CLF-AI】</td>
+		</tr>
+	</tbody>
+</table>
+
+
+<h2>Meeting &amp; Visiting (2016.9-Now, Graduate Period)</h2>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td>Shenzhen University, Shenzhen, China, 2020.</td>
+		</tr>
+		<tr>
+			<td> Hunan University, Changsha, China, 2020.</td>
+		</tr>
+		<tr>
+			<td> Hunan Normal University, Changsha, China, 2020.</td>
+		</tr>
+		<tr>
+			<td> National Defense University, Changsha, China, 2020.</td>
+		</tr>
+		<tr>
+			<td>CSIAM-2020, Changsha, China, 2020.</td>
+		</tr>
+        <tr>
+			<td> PRCV-2020, Nanjing, China, 2020.</td>
+		</tr>
+		<tr>
+			<td> SCF-2020, Shanghai, China, 2019.</td>
+		</tr>
+		<tr>
+			<td> Neurlps-Shanghai, Shanghai, China, 2019.</td>
+		</tr>
+		<tr>
+			<td> Ewha Womans University, Seoul, Korea, 2019.</td>
+		</tr>
+		<tr>
+			<td> ICCV-2019, Seoul, Korea, 2019.</td>
+		</tr>
+		<tr>
+			<td> YouKu-VSRE-2019, Hanzhou, China, 2019.</td>
+		</tr>
+		<tr>
+			<td> RA, The Chinese University of Hong Kong, Hong Kong, China, 2019.</td>
+		</tr>
+		<tr>
+			<td> RAMIDS-2019, Shanghai Jiao Tong University, Shanghai, China, 2019.</td>
+		</tr>
+		<tr>
+			<td> University of Science and Technology of China, Hefei, China, 2019.</td>
+		</tr>
+		<tr>
+			<td> VALSE-2019, Hefei, China, 2019.</td>
+		</tr>
+		<tr>
+			<td> Technical University of Munich, Munich, Germany, 2018.</td>
+		</tr>
+		<tr>
+			<td> ECCV-2018, Munich, Germany, 2018.</td>
+		</tr>
+		<tr>
+			<td> ECCV Pre-Conference, Tencent, Shenzhen, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> Macao Polytechnic Institut, Macao, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> The University of Hong Kong, Hong Kong, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> The Hong Kong University of Science and Technology, Hong Kong, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> The Hong Kong Polytechnic University, Hong Kong, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> TCity University of Hong Kong, Hong Kong, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> THong Kong Baptist University, Hong Kong, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> RA, The Chinese University of Hong Kong, Hong Kong, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> AWS Reinvent, Shanghai, China, 2018.</td>
+		</tr>
+		<tr>
+			<td> MICS-2017, Shanghai Jiao Tong University, Shanghai, China, 2017.</td>
+		</tr>
+		<tr>
+			<td> FLAIR-2017, Shanghai, China, 2017.</td>
+		</tr>
+		<tr>
+			<td> VALSE-2017, Xiamen University, Xiamen, China, 2017.</td>
+		</tr>
+		<tr>
+			<td> Tianyuan Class, Zhejiang University, Hanzhou, China, 2017.</td>
+		</tr>
+		<tr>
+			<td> ROS Class, East China University, Shanghai, China, 2017.</td>
+		</tr>
+		<tr>
+			<td> MLA-2016, Nanjing University, Nanjing, China, 2016.</td>
+		</tr>
+		<tr>
+			<td> Youth Vision Seminar, ShanghaiTech University, Shanghai, China, 2016.</td>
 		</tr>
 	</tbody>
 </table>
