--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>	
-		<td width="206", hight="100">
-		<img src="./indexpics/PFFNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<td width="206">
+		<img src="./reports/ICCV.jpeg" width="150" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
 		<p><em>IEEE International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2019.<br>
@@ -361,7 +361,7 @@
 </table>
 
 
-<h2>Meeting &amp; Visiting (2016.9-Now, Graduate Period)</h2>
+<h2>Meeting &amp; Visiting (2016.9-Now)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
