--- a/index.html
+++ b/index.html
@@ -348,15 +348,27 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>	
-		<td width="206">
-		<img src="./reports/ICCV.jpeg" width="150" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
-		<p><em>IEEE International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2019.<br>
-		Seoul, Korea, 2019.11.02.<br>
-		<a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
-		</td>
+			<td width="206">
+				<img src="./reports/ICCV.jpeg" width="150" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
+				<p><em>IEEE International Conference on Computer Vision</em> (<i><b>ICCV</b></i>).<br>
+				Seoul, Korea, 2019.11.02.<br>
+				<a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
+			</td>
 		</tr>
+
+		<tr>	
+			<td width="206">
+					<img src="./reports/SZ.jpeg" width="150" style="box-shadow: 4px 4px 8px #888">
+				</td>		
+				<td> Exploration and construction of lightweight image restoration model<br>
+					<p><em>Institute of Big Data Technology and Application, School of Computer and Software, Shenzhen University.</em><br>
+					Shenzhen, China, 2020.12.21.<br>
+					<a href="poster/SZ.pdf", target="_blank">[Poster]</a>
+					<a href="slides/SZ-Lightweight.pdf", target="_blank">[Slides]</a>
+				</td>
+			</tr>
 	</tbody>
 </table>
 
