--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 277] [Highest Citation: 160] [Total IF: 34.066] [Accepted: 13]</h3>
+<h3>[Total Citations: 281] [Highest Citation: 162] [Total IF: 34.066] [Accepted: 13]</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -349,7 +349,7 @@
 	<tbody>
 		<tr>	
 			<td width="206">
-				<img src="./reports/ICCV.jpeg" width="150" style="box-shadow: 4px 4px 8px #888">
+				<img src="./reports/ICCV.png" width="150" style="box-shadow: 4px 4px 8px #888">
 			</td>		
 			<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
 				<p><em>IEEE International Conference on Computer Vision</em> (<i><b>ICCV</b></i>).<br>
@@ -360,7 +360,7 @@
 
 		<tr>	
 			<td width="206">
-					<img src="./reports/SZ.jpeg" width="150" style="box-shadow: 4px 4px 8px #888">
+					<img src="./reports/SZ.png" width="150" style="box-shadow: 4px 4px 8px #888">
 				</td>		
 				<td> Exploration and construction of lightweight image restoration model<br>
 					<p><em>Institute of Big Data Technology and Application, School of Computer and Software, Shenzhen University.</em><br>
